[package]
name = "nail"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.4.3"
termion = "1.5.6"
tui = { version = "0.15.0", features=["termion"] }
stderrlog = "0.5.1"
dirs = "3.0.2"
rand = "0.8.4"
regex = "1.5.4"
failure = "0.1.8"
ryu = "1"
